# MyJonggApp

./: .gitignore  LICENSE  Pipfile  README.md  app.spec  app_linux.spec  build_linux.sh  build_windows.bat  hook-numpy.py  plotly_dashboard_plan.md  pyproject.toml  test_dashboard_creation.py  test_rank_timeline.py  visualisierungsideen.md
.github/: RELEASE_GUIDE.md
.github/workflows/: README.md  build-linux.yml  build-releases.yml  release.yml
docs/: data_structure.md
src/: game.kv  main.py
src/backend/: data_export.py  game.py  helper_functions.py
src/backend/evaluation/: excel_loader.py  orchestrator.py  transformations.py  visualization.py
src/frontend/: README.md
src/frontend/components/: buttons.py  cards.py  inputs.py  popups.py
src/frontend/screens/: add_points_screen.py  config.py  evaluation_screen.py  final_screen.py  game_mode_screen.py  game_over_screen.py  round_summary_screen.py  save_game_screen.py  scoreboard_screen.py  start_screen.py  stats_screen.py  styles.py  welcome_screen.py
src/frontend/shared/: __init__.py  config.py  styles.py  utils.py
