[project]
name = "myjong"
version = "0.1.0"
description = "MyJong Calculator Application"
requires-python = ">=3.8"
dependencies = [
    "kivy==2.3.0",
    "kivymd==1.2.0",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
]

[project.optional-dependencies]
dev = [
    "pyinstaller==6.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myjong"]
