[project]
name = "myjongg"
version = "1.8.0"
description = "MyJongg Calculator Application"
requires-python = ">=3.12"
dependencies = [
    "kivy==2.3.0",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "plyer>=2.1.0",
    "numpy==2.2.3",
    "plotly>=5.24.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller==6.11.1",
]
windows = [
    "kivy_deps.sdl2>=0.6.0",
    "kivy_deps.glew>=0.3.1",
]
